<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presenter.views.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_empty"
        app:layout_constraintBottom_toTopOf="@+id/floating_reset"
        android:layout_marginBottom="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/information_card_height"
                android:layout_margin="@dimen/spacing_large"
                app:cardCornerRadius="@dimen/spacing_large"
                app:cardElevation="@dimen/spacing_large">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView_open_windows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryTextColor"
                            tools:text="@string/open_windows" />

                        <TextView
                            android:id="@+id/textVIew_closed_windows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_micro"
                            android:textColor="@color/secondaryTextColor"
                            tools:text="@string/closed_windows" />

                        <TextView
                            android:id="@+id/textView_open_right_windows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryTextColor"
                            tools:text="@string/open_right_windows" />

                        <TextView
                            android:id="@+id/textView_open_left_windows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryTextColor"
                            tools:text="@string/open_left_windows" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view_aux_open_door"
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="@dimen/spacing_large"
                        android:layout_marginEnd="@dimen/spacing_micro"
                        android:background="@color/open_window"
                        app:layout_constraintBottom_toBottomOf="@+id/textView_aux_open_wing"
                        app:layout_constraintEnd_toStartOf="@+id/textView_aux_open_wing" />

                    <TextView
                        android:id="@+id/textView_aux_open_wing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/open_wing"
                        app:layout_constraintBottom_toBottomOf="@+id/view_aux_closed_wing"
                        app:layout_constraintEnd_toStartOf="@+id/view_aux_closed_wing" />

                    <TextView
                        android:id="@+id/textView_aux_closed_wing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closed_wing"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <View
                        android:id="@+id/view_aux_closed_wing"
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="@dimen/spacing_large"
                        android:layout_marginEnd="@dimen/spacing_micro"
                        android:background="@color/closed_window"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView_aux_closed_wing" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_windows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/castle_window_item" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_reset_24"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floating_step_by_step"
        app:layout_constraintStart_toEndOf="@+id/floating_reset"
        app:srcCompat="@drawable/baseline_attach_money_24"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_step_by_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_skip_next_24"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>